maybe fixed screencast thumb bug on safari

--- a/source/client/scss/components/_main.scss
+++ b/source/client/scss/components/_main.scss
@@ -108,6 +108,7 @@
     &__thumb-wrap {
       margin-right: 16px;
       position: relative;
+      max-width: 196px;
     }
     &__info {
       width: 100%;
